# CMakeijkplayer

./: .gitignore  README.md  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/tv/danmaku/ijk/media/example/application/: AppActivity.java
app/src/main/java/tv/danmaku/ijk/media/example/widget/media/: IjkVideoView.java  SurfaceRenderView.java  TextureRenderView.java
app/src/main/res/layout/: activity_player.xml
gradle/wrapper/: gradle-wrapper.properties
ijkplayer/: build.gradle
ijkplayer-java/: build.gradle
ijkplayer/src/main/cpp/: CMakeLists.txt
ijkplayer/src/main/cpp/ffmpeg/include/libffmpeg/: config.h
ijkplayer/src/main/cpp/ijkmedia/ijkplayer/android/: ijkplayer_jni.c
ijkplayer/src/main/cpp/ijkmedia/ijksdl/android/: ijksdl_android_jni.h
ijkplayer/src/main/java/tv/danmaku/ijk/media/ijkplayer/: NativeLib.java
